# proj

./: .coverage  .env  .gitignore  alembic.ini  alembic_run.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5e3ad26222ed_init_schema.py
app/: __init__.py  database.py  logger.py
app/events/: __init__.py  events.py
app/exceptions/: __init__.py
app/hooks/: __init__.py  auth_hooks.py
app/middleware/: __init__.py  rate_limiting.py  request_logger.py  security_headers.py
app/models/: __init__.py  base.py  task.py  user.py
app/schemas/: __init__.py  auth_schemas.py  base_schema.py  task_schemas.py  user_schemas.py
app/services/: __init__.py  base_service.py  task_service.py  user_service.py
app/utils/: __init__.py  auth_utils.py  email_validator.py  password_manager.py  request_validator.py  response_utils.py
app/views/: __init__.py  auth_routes.py  main_routes.py  task_routes.py  user_routes.py
test_api/main/: main.http
test_api/tasks/: create_task.http  get_task_by_id.http  get_tasks.http
test_api/user/: delete_user.http  get_user.http  put_user.http
